--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
-gradio==4.43.0
+# Core dependencies
+gradio==4.44.0
+torch==2.3.0
+transformers==4.42.4
 sentence-transformers==2.2.2
-huggingface-hub==0.20.3
-torch>=2.0.0
-pandas
-numpy
+
+# Ensure precompiled tokenizers
+tokenizers==0.19.1
+huggingface-hub==0.24.6
+numpy==1.26.4
+pandas==2.2.2
+
+# Optional but helps compatibility
+tqdm==4.66.4
+scikit-learn==1.5.0
