--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-gradio==4.44.0
+# requirements.txt
 torch==2.5.1
-transformers==4.42.4
-sentence-transformers==2.2.2
-huggingface-hub==0.24.6
-numpy==1.26.4
 pandas==2.2.2
-scikit-learn==1.5.0
-tqdm==4.66.4
+numpy==1.26.4
+scikit-learn==1.5.2
+gradio==4.43.0
+# add your other libs here
